# wave

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: ci.yml  docs.yml  release.yml
benchmarks/: metal_benchmark.swift  results_m4pro_v04.txt  results_m4pro_v04_autotuned.txt  scaling_benchmark.py  tuning_results_m4pro.json
benchmarks/autotune/: autotune.sh  generate_kernel.py  tune_benchmark.swift
docs/: README.md  astro.config.mjs  package-lock.json
docs/public/: CNAME
docs/src/content/docs/: index.mdx
docs/src/content/docs/architecture/: backends.md  compiler.md  emulator.md  isa-design.md  overview.md
docs/src/content/docs/getting-started/: installation.md  introduction.md  quickstart.md  supported-gpus.md
docs/src/content/docs/guides/: control-flow.md  cpp-sdk.md  memory-model.md  optimization.md  python-sdk.md  rust-sdk.md  typescript-sdk.md  writing-kernels.md
docs/src/styles/: custom.css
pytorch-integration/: test_cross_vendor.py  test_gradient_comparison.py  test_kernels.py  test_metal_kernels.py  train_mnist.py  train_mnist_metal.py  train_mnist_pytorch.py  wave_cuda_runner.py  wave_kernels.py  wave_metal_runner.py  wave_runtime.py
sdk/cpp/: CMakeLists.txt  README.md
sdk/cpp/include/wave/: array.h  device.h  kernel.h  wave.h
sdk/cpp/src/: wave.cpp
sdk/cpp/tests/: test_vector_add.cpp
sdk/js/: README.md  package-lock.json  package.json  tsconfig.json
sdk/js/src/: array.ts  device.ts  index.ts  kernel.ts  runtime.ts
sdk/js/tests/: test_vector_add.ts
sdk/python/: README.md  pyproject.toml
sdk/python/src/wave_gpu/: __init__.py  array.py  device.py  distributed.py  kernel.py  runtime.py  types.py
sdk/python/tests/: __init__.py  test_array.py  test_device.py  test_kernel.py  test_vector_add.py
sdk/rust/: Cargo.toml  README.md
sdk/rust/src/: lib.rs
sdk/rust/tests/: integration.rs
tests/: README.md
tests/ci/: README.md  run_backend_tests.sh  run_emulator_tests.sh
tests/ci/kernels/: allreduce.wave  bias_add.wave  bounds_check.wave  gemm_bias_gelu.wave  gemm_bias_relu.wave  gemm_bias_relu_f16.wave  gemm_blocked.wave  gemm_blocked_f16.wave  gemm_mma.wave  mma_query.wave  mma_simple.wave  relu.wave  scalar_multiply.wave  vector_add_bf16.wave  vector_add_f16.wave  vector_sub.wave
tests/spec-verification/: Cargo.toml  README.md  run_all.sh
tests/spec-verification/common/: harness.rs
tests/spec-verification/src/: harness.rs  main.rs  real_programs.rs  section2_execution_model.rs  section3_register_model.rs  section4_memory_model.rs  section5_control_flow.rs  section6_instructions.rs  section6_synchronization.rs  section6_wave_ops.rs  section7_capabilities.rs  section8_encoding.rs  section9_conformance.rs  stress_tests.rs
wave-asm/: Cargo.toml  README.md
wave-asm/examples/: sample.wave
wave-asm/src/: ast.rs  diagnostics.rs  encoder.rs  lexer.rs  lib.rs  main.rs  opcodes.rs  output.rs  parser.rs  symbols.rs
wave-asm/src/tests/: integration_tests.rs  mod.rs
wave-compiler/: Cargo.toml  README.md
wave-compiler/examples/: vector_add.cpp  vector_add.py  vector_add.rs  vector_add.ts
wave-compiler/src/: lib.rs  main.rs
wave-compiler/src/analysis/: alias.rs  cfg.rs  dominance.rs  escape.rs  liveness.rs  loop_analysis.rs  mod.rs
wave-compiler/src/diagnostics/: error.rs  mod.rs  report.rs  source_map.rs
wave-compiler/src/driver/: config.rs  mod.rs  pipeline.rs  session.rs
wave-compiler/src/emit/: binary.rs  mod.rs  wave_emit.rs
wave-compiler/src/frontend/: cpp.rs  mod.rs  python.rs  rust.rs  typescript.rs
wave-compiler/src/hir/: expr.rs  kernel.rs  mod.rs  stmt.rs  types.rs  validate.rs
wave-compiler/src/lir/: display.rs  instruction.rs  mod.rs  operand.rs
wave-compiler/src/lowering/: hir_to_mir.rs  mir_to_lir.rs  mod.rs
wave-compiler/src/mir/: basic_block.rs  builder.rs  display.rs  function.rs  instruction.rs  mod.rs  types.rs  value.rs
wave-compiler/src/optimize/: constant_fold.rs  cse.rs  dce.rs  licm.rs  loop_unroll.rs  mem2reg.rs  mod.rs  pass.rs  sccp.rs  simplify_cfg.rs  strength_reduce.rs
wave-compiler/src/regalloc/: coalesce.rs  coloring.rs  interference.rs  live_range.rs  mod.rs  spill.rs
wave-decode/: Cargo.toml  README.md
wave-decode/src/: decoder.rs  instruction.rs  lib.rs  opcodes.rs  wbin.rs
wave-dis/: Cargo.toml  README.md
wave-dis/src/: format.rs  lib.rs  main.rs
wave-dis/tests/: round_trip.rs
wave-emu/: Cargo.toml  README.md
wave-emu/src/: barrier.rs  control_flow.rs  core.rs  decoder.rs  executor.rs  lib.rs  main.rs  memory.rs  scheduler.rs  shuffle.rs  stats.rs  thread.rs  wave.rs
wave-emu/tests/: roundtrip.rs
wave-hip/: Cargo.toml  README.md
wave-hip/examples/: run_on_amd.hip
wave-hip/src/: codegen.rs  control_flow.rs  intrinsics.rs  kernel.rs  lib.rs  main.rs  memory.rs  registers.rs
wave-hip/tests/: test_codegen.rs  test_programs.rs
wave-metal/: Cargo.toml  README.md
wave-metal/examples/: run_on_metal.swift  vector_add.wave
wave-metal/src/: codegen.rs  control_flow.rs  intrinsics.rs  kernel.rs  lib.rs  main.rs  memory.rs  registers.rs
wave-metal/tests/: test_codegen.rs  test_programs.rs
wave-ptx/: Cargo.toml  README.md
wave-ptx/examples/: reduction.wave  run_on_gpu.py
wave-ptx/src/: codegen.rs  control_flow.rs  intrinsics.rs  kernel.rs  lib.rs  main.rs  memory.rs  registers.rs
wave-ptx/tests/: test_arithmetic.rs  test_control_flow.rs  test_memory.rs  test_programs.rs  test_wave_ops.rs
wave-runtime/: Cargo.toml  README.md
wave-runtime/src/: backend.rs  cache.rs  compiler.rs  device.rs  error.rs  ffi.rs  launcher.rs  lib.rs  memory.rs  multi.rs
wave-runtime/tests/: integration.rs
wave-sycl/: Cargo.toml  README.md
wave-sycl/examples/: run_on_intel.cpp
wave-sycl/src/: codegen.rs  control_flow.rs  intrinsics.rs  kernel.rs  lib.rs  main.rs  memory.rs  registers.rs
wave-sycl/tests/: test_codegen.rs  test_programs.rs
waveas/: Cargo.toml  README.md
waveas/examples/: sample.wave  sample.wbin
waveas/src/: ast.rs  encoder.rs  lexer.rs  lib.rs  main.rs  output.rs
waveas/src/tests/: integration_tests.rs  mod.rs
(+25 files in other folders)
