[package]
name = "wave-dis"
version = "0.1.1"
edition = "2021"
authors = ["Ojima Abraham"]
description = "WAVE disassembler - reads .wbin files and produces assembly text"
license = "Apache-2.0"
repository = "https://github.com/Oabraham1/wave"
homepage = "https://wave.ojima.me"

[dependencies]
wave-decode = { version = "0.1.1", path = "../wave-decode" }
clap = { version = "4", features = ["derive"] }
thiserror = "1"

[dev-dependencies]
wave-asm = { version = "0.1.1", path = "../wave-asm" }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "deny"
pedantic = "warn"
