[package]
name = "wave-emu"
version = "0.1.0"
edition = "2021"
authors = ["Ojima Abraham"]
description = "WAVE emulator - reference implementation of the WAVE ISA"
license = "Apache-2.0"
repository = "https://github.com/Oabraham1/wave"
homepage = "https://wave.ojima.me"

[dependencies]
clap = { version = "4", features = ["derive"] }
thiserror = "1"
half = "2"
byteorder = "1"
wave-decode = { version = "0.1.0", path = "../wave-decode" }

[dev-dependencies]
wave-asm = { version = "0.1.0", path = "../wave-asm" }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "deny"
pedantic = "warn"
