[package]
name = "wave-hip"
version = "0.1.1"
edition = "2021"
authors = ["Ojima Abraham"]
description = "WAVE HIP backend - translates WAVE binary to AMD HIP kernel source"
license = "Apache-2.0"
repository = "https://github.com/Oabraham1/wave"
homepage = "https://wave.ojima.me"

[dependencies]
wave-decode = { version = "0.1.1", path = "../wave-decode" }
clap = { version = "4", features = ["derive"] }
thiserror = "1"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "deny"
pedantic = "warn"
