[package]
name = "wave-metal"
version = "0.1.0"
edition = "2021"
authors = ["Ojima Abraham"]
description = "WAVE Metal backend - translates WAVE binary to Apple Metal Shading Language"
license = "Apache-2.0"
repository = "https://github.com/Oabraham1/wave"
homepage = "https://wave.ojima.me"

[dependencies]
wave-decode = { version = "0.1.0", path = "../wave-decode" }
clap = { version = "4", features = ["derive"] }
thiserror = "1"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "deny"
pedantic = "warn"
