[package]
name = "wave-gpu"
version = "0.1.0"
edition = "2021"
authors = ["Ojima Abraham"]
description = "WAVE SDK for Rust - write GPU kernels in Rust, run on any GPU"
license = "Apache-2.0"
repository = "https://github.com/Oabraham1/wave"
homepage = "https://wave.ojima.me"

[dependencies]
wave-runtime = { version = "0.1.0", path = "../../wave-runtime" }
wave-compiler = { version = "0.1.0", path = "../../wave-compiler" }
thiserror = "1"

[dev-dependencies]
wave-asm = { version = "0.1.0", path = "../../wave-asm" }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "deny"
pedantic = "warn"
