[package]
name = "wave-spec-verification"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
wave-asm = { version = "0.1.0", path = "../../wave-asm" }
wave-emu = { version = "0.1.0", path = "../../wave-emu" }
wave-decode = { version = "0.1.0", path = "../../wave-decode" }
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[bin]]
name = "run-spec-tests"
path = "src/main.rs"
